# pyarmnn-release

./: .gitignore  CMakeLists.txt  README.md  SCR-pyarmnn-release.txt  run_pyarmnn.sh
cmake/: GlobalConfig.cmake
doc/: index.html
docs/: index.html
examples/: example_utils.py  onnx_mobilenetv2.py  tflite_mobilenetv1_quantized.py
python/pyarmnn/: CMakeLists.txt  LICENSE  Makefile  README.md  conftest.py  pylintconfig  setup.py.in  swig_generate.py.in  tox.ini
python/pyarmnn/examples/: example_utils.py  requirements.txt
python/pyarmnn/scripts/: download_resources.py  generate_docs.py  image_to_npy.py
python/pyarmnn/src/pyarmnn/: __init__.py  _version.py
python/pyarmnn/src/pyarmnn/_generated/: __init__.py
python/pyarmnn/src/pyarmnn/_quantization/: __init__.py  quantize_and_dequantize.py
python/pyarmnn/src/pyarmnn/_tensor/: __init__.py  const_tensor.py  tensor.py  workload_tensors.py
python/pyarmnn/src/pyarmnn/_utilities/: __init__.py  profiling_helper.py
python/pyarmnn/src/pyarmnn/swig/: armnn.i  armnn_caffeparser.i  armnn_onnxparser.i  armnn_tfliteparser.i  armnn_tfparser.i  armnn_version.i  (+1 more)
python/pyarmnn/test/: requirements.txt  test_caffe_parser.py  test_const_tensor.py  test_descriptors.py  test_generated.py  test_iconnectable.py  test_network.py  test_onnx_parser.py  test_profiling_utilities.py  test_quantize_and_dequantize.py  test_runtime.py  test_setup.py  test_supported_backends.py  test_tensor.py  test_tensor_conversion.py  test_tensor_info.py  test_tensor_shape.py  test_tf_parser.py  test_tflite_parser.py  test_types.py  test_version.py
(+14 files in other folders)
